--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=5000
+MONGO_DB_URI=mongodb+srv://chatBot:qPYtJsKOkTLoEH9s@cluster0.9qzghgm.mongodb.net/chatBot?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=4klj5doifajlkklfjha5nmalusdfnadf
+NODE_ENV=development
